// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSideNav is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiSideNav testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--primary euiSideNav__mobileToggle"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="apps"
      />
      <span
        class="euiButtonEmpty__text"
      />
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;

exports[`EuiSideNav props isOpenOnMobile defaults to false 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--primary euiSideNav__mobileToggle"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="apps"
      />
      <span
        class="euiButtonEmpty__text"
      />
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;

exports[`EuiSideNav props isOpenOnMobile is rendered when specified as true 1`] = `
<nav
  class="euiSideNav euiSideNav-isOpenMobile"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--primary euiSideNav__mobileToggle"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="apps"
      />
      <span
        class="euiButtonEmpty__text"
      />
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;

exports[`EuiSideNav props items is rendered 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--primary euiSideNav__mobileToggle"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="apps"
      />
      <span
        class="euiButtonEmpty__text"
      />
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root euiSideNavItem--hasChildItems"
    >
      <div
        class="euiSideNavItemButton"
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
          >
            A
          </span>
        </span>
      </div>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk class"
        >
          <div
            aria-label="aria"
            class="euiSideNavItemButton"
            data-test-sub="dts"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                B
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSideNavItem euiSideNavItem--trunk euiSideNavItem--emphasized"
        >
          <div
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label"
              >
                C
              </span>
              <span
                color="subdued"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`EuiSideNav props items renders items having { forceOpen: true } in open state, and automatically opens parent items 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--primary euiSideNav__mobileToggle"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="apps"
      />
      <span
        class="euiButtonEmpty__text"
      />
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root euiSideNavItem--hasChildItems"
    >
      <div
        class="euiSideNavItemButton"
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
          >
            A
          </span>
        </span>
      </div>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <div
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                B
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSideNavItem euiSideNavItem--trunk euiSideNavItem--hasChildItems"
        >
          <div
            class="euiSideNavItemButton euiSideNavItemButton-isOpen"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                C
              </span>
            </span>
          </div>
          <div
            class="euiSideNavItem__items"
          >
            <div
              class="euiSideNavItem euiSideNavItem--branch euiSideNavItem--hasChildItems"
            >
              <div
                class="euiSideNavItemButton euiSideNavItemButton-isOpen"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    D
                  </span>
                </span>
              </div>
              <div
                class="euiSideNavItem__items"
              >
                <div
                  class="euiSideNavItem euiSideNavItem--branch"
                >
                  <div
                    class="euiSideNavItemButton"
                  >
                    <span
                      class="euiSideNavItemButton__content"
                    >
                      <span
                        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                      >
                        E
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`EuiSideNav props items renders items using a specified callback 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--primary euiSideNav__mobileToggle"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="apps"
      />
      <span
        class="euiButtonEmpty__text"
      />
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root euiSideNavItem--hasChildItems"
    >
      <a
        class="euiSideNavItemButton euiSideNavItemButton--isClickable"
        data-test-id="my-custom-element"
        href="http://www.elastic.co"
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
          >
            A
          </span>
        </span>
      </a>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <a
            class="euiSideNavItemButton"
            data-test-id="my-custom-element"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                B
              </span>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`EuiSideNav props items renders items which are links 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--primary euiSideNav__mobileToggle"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="apps"
      />
      <span
        class="euiButtonEmpty__text"
      />
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root euiSideNavItem--hasChildItems"
    >
      <a
        class="euiSideNavItemButton euiSideNavItemButton--isClickable"
        href="http://www.elastic.co"
        rel=""
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
          >
            A
          </span>
        </span>
      </a>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <div
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                B
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <div
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                C
              </span>
              <span
                color="subdued"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`EuiSideNav props items renders selected item and automatically opens parent items 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--primary euiSideNav__mobileToggle"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="apps"
      />
      <span
        class="euiButtonEmpty__text"
      />
    </span>
  </button>
  <div
    class="euiSideNav__content"
  >
    <div
      class="euiSideNavItem euiSideNavItem--root euiSideNavItem--hasChildItems"
    >
      <div
        class="euiSideNavItemButton"
      >
        <span
          class="euiSideNavItemButton__content"
        >
          <span
            class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
          >
            A
          </span>
        </span>
      </div>
      <div
        class="euiSideNavItem__items"
      >
        <div
          class="euiSideNavItem euiSideNavItem--trunk"
        >
          <div
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                B
              </span>
            </span>
          </div>
        </div>
        <div
          class="euiSideNavItem euiSideNavItem--trunk euiSideNavItem--hasChildItems"
        >
          <div
            class="euiSideNavItemButton euiSideNavItemButton-isOpen"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                C
              </span>
            </span>
          </div>
          <div
            class="euiSideNavItem__items"
          >
            <div
              class="euiSideNavItem euiSideNavItem--branch"
            >
              <div
                class="euiSideNavItemButton euiSideNavItemButton-isSelected"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    D
                  </span>
                </span>
              </div>
            </div>
            <div
              class="euiSideNavItem euiSideNavItem--branch"
            >
              <div
                class="euiSideNavItemButton"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    E
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
